Implemented setMyPhoto and setMyUserName
